<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_login"
            android:title="@string/text_login" />
        <item
            android:id="@+id/nav_item_register"
            android:title="@string/text_register" />
        <item
            android:id="@+id/nav_item_profile"
            android:title="@string/text_profile" />
        <item
            android:id="@+id/nav_item_logout"
            android:title="@string/text_logout" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_item_place"
                android:title="@string/text_place" />
        </menu>
    </item>
</menu>