<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <ImageView
        android:id="@+id/iv_place_photo"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"
        android:padding="8dp" />

    <TextView
        android:id="@+id/tv_place_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_toLeftOf="@+id/tv_place_date"
        android:layout_toRightOf="@+id/iv_place_photo"
        android:text="@string/text_name"
        android:textColor="@android:color/black"
        android:textSize="15dip"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_place_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_place_name"
        android:layout_toRightOf="@+id/iv_place_photo"
        android:ellipsize="end"
        android:text="@string/text_location"
        android:textColor="@android:color/black"
        android:textSize="13dip" />

    <TextView
        android:id="@+id/tv_place_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dip"
        android:layout_marginRight="5dp"
        android:text="@string/text_created_at"
        android:textColor="@android:color/black"
        android:textSize="12dip" />

</RelativeLayout>
