<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_profile"
                android:textAlignment="center"
                android:textSize="30dp" />

            <RelativeLayout
                android:id="@+id/rl_profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_title"
                android:layout_centerHorizontal="true"
                android:layout_gravity="top|center"
                android:layout_marginTop="@dimen/child_margin_top"

                android:padding="2dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border">

                    <ImageView
                        android:id="@+id/iv_profile_edit"
                        android:layout_width="120dp"
                        android:layout_height="120dp" />

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/camera_black" />
                </RelativeLayout>
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_profile_image"
                android:layout_marginTop="@dimen/child_margin_top">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/person"
                    android:hint="@string/text_username"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_name"
                android:layout_marginTop="@dimen/child_margin_top">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/email"
                    android:hint="@string/text_email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_email"
                android:layout_marginTop="@dimen/child_margin_top"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/gender_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ti_password"
                android:layout_marginTop="@dimen/child_margin_top"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/text_male" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/text_female" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gender_group"
                android:layout_marginTop="@dimen/button_margin"
                android:paddingLeft="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding"
                android:text="@string/text_submit" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>